tests/specs/lockfile/frozen_lockfile/frozen_new_dep_dynamic_jsr.out
Download http://127.0.0.1:4250/@denotest/add/meta.json
Download http://127.0.0.1:4250/@denotest/add/1.0.0_meta.json
Download http://127.0.0.1:4250/@denotest/add/1.0.0/mod.ts
error: Uncaught (in promise) TypeError: The lockfile is out of date. Run `deno cache --frozen=false` or rerun with `--frozen=false` to update it.
changes:
 5 | -      "npm:@denotest/add@1": "npm:@denotest/add@1.0.0"
 5 | +      "jsr:@denotest/add@1": "jsr:@denotest/add@1.0.0",
 6 | +      "npm:@denotest/add@1": "npm:@denotest/add@1.0.0"
 7 | +    },
 8 | +    "jsr": {
 9 | +      "@denotest/add@1.0.0": {
10 | +        "integrity": "[WILDCARD]"
11 | +      }
const { add } = await import(scheme + "@denotest/add@1");
                ^
    at [WILDCARD]